--- a/helm-chart/templates/02-cluster-role.yaml
+++ b/helm-chart/templates/02-cluster-role.yaml
@@ -6,7 +6,7 @@ metadata:
     kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
-  name: kubeshark-cluster-role
+  name: '{{ .Values.tap.selfnamespace }}'
   namespace: kubeshark
 rules:
   - apiGroups:
