--- a/helm-chart/templates/03-cluster-role-binding.yaml
+++ b/helm-chart/templates/03-cluster-role-binding.yaml
@@ -6,7 +6,7 @@ metadata:
     kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
-  name: kubeshark-service-account
+  name: '{{ .Values.tap.selfnamespace }}'
   namespace: kubeshark
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -15,4 +15,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: kubeshark-service-account
-    namespace: kubeshark
+    namespace: '{{ .Values.tap.selfnamespace }}'
