--- a/helm-chart/templates/06-front-pod.yaml
+++ b/helm-chart/templates/06-front-pod.yaml
@@ -35,6 +35,7 @@ spec:
           cpu: 50m
           memory: 50Mi
   dnsPolicy: ClusterFirstWithHostNet
+  imagePullSecrets: '{{ .Values.tap.docker.imagepullsecrets }}'
   serviceAccountName: kubeshark-service-account
   terminationGracePeriodSeconds: 0
   tolerations:
