--- a/manifests/08-worker-daemon-set.yaml
+++ b/manifests/08-worker-daemon-set.yaml
@@ -31,6 +31,8 @@ spec:
             - any
             - -port
             - "8897"
+            - -packet-capture
+            - libpcap
             - -servicemesh
             - -tls
             - -procfs
