:zap: Run the `manifests --dump` and `helm-chart` commands

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -23,6 +23,10 @@ spec:
           value: '{{ .Values.tap.storagelimit }}'
         - name: LICENSE
           value: '{{ .Values.license }}'
+        - name: SCRIPTING_ENV
+          value: '{}'
+        - name: SCRIPTING_SCRIPTS
+          value: '[]'
       image: '{{ .Values.tap.docker.registry }}/hub:{{ .Values.tap.docker.tag }}'
       imagePullPolicy: '{{ .Values.tap.docker.imagePullPolicy }}'
       name: kubeshark-hub
