:sparkles: Add `PersistentVolumeClaim` and mount it to worker `DaemonSet`

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -18,7 +18,7 @@ tap:
   regex: .*
   namespaces: []
   selfnamespace: kubeshark
-  storagelimit: 200MB
+  storagelimit: 300Mi
   dryrun: false
   pcap: ""
   resources:
