:sparkles: Add `storageclass` option to `config.yaml`

--- a/helm-chart/templates/08-persistent-volume-claim.yaml
+++ b/helm-chart/templates/08-persistent-volume-claim.yaml
@@ -16,5 +16,5 @@ spec:
   resources:
     requests:
       storage: '{{ .Values.tap.storagelimit }}'
-  storageClassName: standard
+  storageClassName: '{{ .Values.tap.storageclass }}'
 status: {}
