:sparkles: Add `persistentstorage` option

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -18,6 +18,7 @@ tap:
   regex: .*
   namespaces: []
   selfnamespace: kubeshark
+  persistentstorage: false
   storagelimit: 200Mi
   storageclass: standard
   dryrun: false
