--- a/manifests/09-worker-daemon-set.yaml
+++ b/manifests/09-worker-daemon-set.yaml
@@ -67,6 +67,8 @@ spec:
             - mountPath: /sys
               name: sys
               readOnly: true
+            - mountPath: /app/data
+              name: kubeshark-persistent-volume
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       serviceAccountName: kubeshark-service-account
@@ -83,3 +85,6 @@ spec:
         - hostPath:
             path: /sys
           name: sys
+        - name: kubeshark-persistent-volume
+          persistentVolumeClaim:
+            claimName: kubeshark-persistent-volume-claim
