:bug: Fix the effect of proxy config port changes

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -28,6 +28,9 @@ spec:
       image: '{{ .Values.tap.docker.registry }}/hub:{{ .Values.tap.docker.tag }}'
       imagePullPolicy: '{{ .Values.tap.docker.imagepullpolicy }}'
       name: kubeshark-hub
+      ports:
+        - containerPort: 80
+          hostPort: 8898
       resources:
         limits:
           cpu: '{{ .Values.tap.resources.hub.limits.cpu }}'
