--- a/helm-chart/templates/06-front-pod.yaml
+++ b/helm-chart/templates/06-front-pod.yaml
@@ -22,6 +22,9 @@ spec:
       image: '{{ .Values.tap.docker.registry }}/front:{{ .Values.tap.docker.tag }}'
       imagePullPolicy: '{{ .Values.tap.docker.imagepullpolicy }}'
       name: kubeshark-front
+      ports:
+        - containerPort: 80
+          hostPort: 8899
       readinessProbe:
         failureThreshold: 3
         periodSeconds: 1
