--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -32,7 +32,7 @@ spec:
             - -i
             - any
             - -port
-            - "8897"
+            - '{{ .Values.tap.proxy.worker.srvport }}'
             - -packet-capture
             - '{{ .Values.tap.packetcapture }}'
             - -servicemesh
@@ -42,6 +42,9 @@ spec:
           image: '{{ .Values.tap.docker.registry }}/worker:{{ .Values.tap.docker.tag }}'
           imagePullPolicy: '{{ .Values.tap.docker.imagepullpolicy }}'
           name: kubeshark-worker-daemon-set
+          ports:
+            - containerPort: 80
+              hostPort: 8897
           resources:
             limits:
               cpu: '{{ .Values.tap.resources.worker.limits.cpu }}'
