--- a/manifests/06-front-pod.yaml
+++ b/manifests/06-front-pod.yaml
@@ -22,6 +22,9 @@ spec:
       image: docker.io/kubeshark/front:latest
       imagePullPolicy: Always
       name: kubeshark-front
+      ports:
+        - containerPort: 80
+          hostPort: 8899
       readinessProbe:
         failureThreshold: 3
         periodSeconds: 1
