:zap: Template `hostPort`(s) in the Helm chart

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -30,7 +30,7 @@ spec:
       name: kubeshark-hub
       ports:
         - containerPort: 80
-          hostPort: 8898
+          hostPort: {{ .Values.tap.proxy.hub.srvport }}
       resources:
         limits:
           cpu: '{{ .Values.tap.resources.hub.limits.cpu }}'
