--- a/helm-chart/templates/06-front-pod.yaml
+++ b/helm-chart/templates/06-front-pod.yaml
@@ -24,7 +24,7 @@ spec:
       name: kubeshark-front
       ports:
         - containerPort: 80
-          hostPort: 8899
+          hostPort: {{ .Values.tap.proxy.front.srvport }}
       readinessProbe:
         failureThreshold: 3
         periodSeconds: 1
