:sparkles: Add `Ingress` (#1357)
* :sparkles: Add `Ingress`

* :zap: Rewrite the target in `Ingress`

* :zap: Fix the path of front pod in `Ingress`

* :sparkles: Add `IngressConfig` struct

* :zap: Generate the correct Helm chart based on `tap.ingress` field of `values.yaml`

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -43,6 +43,10 @@ tap:
   ignoreTainted: false
   resourceLabels: {}
   nodeSelectorTerms: []
+  ingress:
+    enabled: false
+    host: ks.svc.cluster.local
+    tls: []
   debug: false
 logs:
   file: ""
