--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -47,6 +47,9 @@ tap:
     enabled: false
     host: ks.svc.cluster.local
     tls: []
+    auth:
+      approvedDomains: []
+    certManager: letsencrypt-prod
   debug: false
 logs:
   file: ""
