--- a/manifests/04-hub-pod.yaml
+++ b/manifests/04-hub-pod.yaml
@@ -23,6 +23,7 @@ spec:
           value: '{}'
         - name: SCRIPTING_SCRIPTS
           value: '[]'
+        - name: AUTH_APPROVED_DOMAINS
       image: docker.io/kubeshark/hub:latest
       imagePullPolicy: Always
       name: kubeshark-hub
