--- a/manifests/tls/certificate.yaml
+++ b/manifests/tls/certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: staging
+  name: kubeshark-tls
   namespace: default
 spec:
   issuerRef:
