:zap: Template the `SCRIPTING_ENV` env in Hub pod (Helm)

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -21,7 +21,7 @@ spec:
         - name: LICENSE
           value: '{{ .Values.license }}'
         - name: SCRIPTING_ENV
-          value: '{}'
+          value: '{{ .Values.scripting.env | toJson }}'
         - name: SCRIPTING_SCRIPTS
           value: '[]'
         - name: AUTH_APPROVED_DOMAINS
