:rewind: Revert `values.yaml`

--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -60,7 +60,6 @@ dumplogs: false
 headless: false
 license: ""
 scripting:
-  env:
-    EXAMPLE: VALUE
+  env: {}
   source: ""
   watchScripts: true
