:rewind: Bring back the functionality of `ignoretainted` field into the Helm chart

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -45,6 +45,8 @@ spec:
   tolerations:
     - effect: NoExecute
       operator: Exists
+{{- if not .Values.tap.ignoretainted }}
     - effect: NoSchedule
       operator: Exists
+{{- end }}
 status: {}
