--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -80,8 +80,10 @@ spec:
       tolerations:
         - effect: NoExecute
           operator: Exists
+{{- if not .Values.tap.ignoretainted }}
         - effect: NoSchedule
           operator: Exists
+{{- end }}
       volumes:
         - hostPath:
             path: /proc
