--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -40,7 +40,7 @@ tap:
   servicemesh: true
   tls: true
   packetcapture: libpcap
-  ignoreTainted: false
+  ignoretainted: false
   resourceLabels: {}
   nodeSelectorTerms: []
   ingress:
