--- a/helm-chart/templates/06-front-pod.yaml
+++ b/helm-chart/templates/06-front-pod.yaml
@@ -44,6 +44,8 @@ spec:
   tolerations:
     - effect: NoExecute
       operator: Exists
+{{- if not .Values.tap.ignoretainted }}
     - effect: NoSchedule
       operator: Exists
+{{- end }}
 status: {}
