:sparkles: Add `icon` field to `Chart.yaml`

--- a/helm-chart/Chart.yaml
+++ b/helm-chart/Chart.yaml
@@ -23,3 +23,4 @@ sources:
   - https://github.com/kubeshark/kubeshark/tree/master/helm-chart
 type: application
 version: "41.1"
+icon: https://raw.githubusercontent.com/kubeshark/assets/master/logo/vector/logo.svg
