:rewind: Bring back the functionality of `resourcelabels` field into the Helm chart

--- a/helm-chart/templates/07-front-service.yaml
+++ b/helm-chart/templates/07-front-service.yaml
@@ -4,8 +4,12 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
+    kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
+  {{- range $key, $value := .Values.tap.resourcelabels }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
   name: kubeshark-front
   namespace: '{{ .Values.tap.selfnamespace }}'
 spec:
