--- a/helm-chart/templates/00-namespace.yaml
+++ b/helm-chart/templates/00-namespace.yaml
@@ -4,8 +4,12 @@ kind: Namespace
 metadata:
   creationTimestamp: null
   labels:
+    kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
+  {{- range $key, $value := .Values.tap.resourcelabels }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
   name: '{{ .Values.tap.selfnamespace }}'
 spec: {}
 status: {}
