--- a/helm-chart/templates/03-cluster-role-binding.yaml
+++ b/helm-chart/templates/03-cluster-role-binding.yaml
@@ -7,6 +7,9 @@ metadata:
     kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
+  {{- range $key, $value := .Values.tap.resourcelabels }}
+    {{ $key }}: {{ $value }}
+  {{- end }}
   name: kubeshark-cluster-role-binding
   namespace: '{{ .Values.tap.selfnamespace }}'
 roleRef:
