:rewind: Bring back the functionality of `nodeselectorterms` field into the Helm chart

--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -52,4 +52,11 @@ spec:
     - effect: NoSchedule
       operator: Exists
 {{- end }}
+{{- if gt (len .Values.tap.nodeselectorterms) 0}}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          {{ .Values.tap.nodeselectorterms | toJson }}
+{{- end }}
 status: {}
