--- a/helm-chart/templates/09-worker-daemon-set.yaml
+++ b/helm-chart/templates/09-worker-daemon-set.yaml
@@ -94,6 +94,13 @@ spec:
         - effect: NoSchedule
           operator: Exists
 {{- end }}
+{{- if gt (len .Values.tap.nodeselectorterms) 0}}
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              {{ .Values.tap.nodeselectorterms | toJson }}
+{{- end }}
       volumes:
         - hostPath:
             path: /proc
