--- a/helm-chart/templates/02-cluster-role.yaml
+++ b/helm-chart/templates/02-cluster-role.yaml
@@ -7,8 +7,8 @@ metadata:
     kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
-  {{- range $key, $value := .Values.tap.resourcelabels }}
-    {{ $key }}: {{ $value }}
+  {{- if .Values.tap.resourcelabels }}
+    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
   {{- end }}
   name: kubeshark-cluster-role
   namespace: '{{ .Values.tap.selfnamespace }}'
