--- a/helm-chart/templates/04-hub-pod.yaml
+++ b/helm-chart/templates/04-hub-pod.yaml
@@ -7,8 +7,8 @@ metadata:
     app: kubeshark-hub
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
-  {{- range $key, $value := .Values.tap.resourcelabels }}
-    {{ $key }}: {{ $value }}
+  {{- if .Values.tap.resourcelabels }}
+    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
   {{- end }}
   name: kubeshark-hub
   namespace: '{{ .Values.tap.selfnamespace }}'
@@ -57,6 +57,6 @@ spec:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
-          {{ .Values.tap.nodeselectorterms | toJson }}
+          {{- toYaml .Values.tap.nodeselectorterms | nindent 8 }}
 {{- end }}
 status: {}
