--- a/helm-chart/templates/11-ingress.yaml
+++ b/helm-chart/templates/11-ingress.yaml
@@ -11,8 +11,8 @@ metadata:
     kubeshark-cli-version: v1
     kubeshark-created-by: kubeshark
     kubeshark-managed-by: kubeshark
-  {{- range $key, $value := .Values.tap.resourcelabels }}
-    {{ $key }}: {{ $value }}
+  {{- if .Values.tap.resourcelabels }}
+    {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
   {{- end }}
   name: kubeshark-ingress
   namespace: '{{ .Values.tap.selfnamespace }}'
@@ -37,13 +37,7 @@ spec:
             path: /()(.*)
             pathType: Prefix
   tls:
-  {{- range .Values.tap.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
+    {{- toYaml .Values.tap.ingress.tls | nindent 2 }}
 status:
   loadBalancer: {}
 {{- end }}
