:zap: Remove the unnecessary single quotes from the Helm templates

--- a/helm-chart/templates/00-namespace.yaml
+++ b/helm-chart/templates/00-namespace.yaml
@@ -7,6 +7,6 @@ metadata:
   {{- if .Values.tap.resourcelabels }}
     {{- toYaml .Values.tap.resourcelabels | nindent 4 }}
   {{- end }}
-  name: '{{ .Values.tap.selfnamespace }}'
+  name: {{ .Values.tap.selfnamespace }}
 spec: {}
 status: {}
