:sparkles: Template the `ingressClassName` field in `Ingress` resource

--- a/helm-chart/templates/11-ingress.yaml
+++ b/helm-chart/templates/11-ingress.yaml
@@ -14,7 +14,7 @@ metadata:
   name: kubeshark-ingress
   namespace: {{ .Values.tap.selfnamespace }}
 spec:
-  ingressClassName: kubeshark-ingress-class
+  ingressClassName: {{ .Values.tap.ingress.className }}
   rules:
     - host: {{ .Values.tap.ingress.host }}
       http:
