--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -45,6 +45,7 @@ tap:
   nodeselectorterms: []
   ingress:
     enabled: false
+    className: kubeshark-ingress-class
     host: ks.svc.cluster.local
     tls: []
     auth:
