--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -46,6 +46,7 @@ tap:
   ingress:
     enabled: false
     className: kubeshark-ingress-class
+    controller: k8s.io/ingress-nginx
     host: ks.svc.cluster.local
     tls: []
     auth:
